# quad_sys

./: .gitignore
devel/: .catkin  setup.sh
devel/lib/RPdynamics/: RPdynamics_node
devel/lib/pkgconfig/: RPdynamics.pc  a1_description.pc  gazebo_sim.pc  quadsys.pc  unitree_controller.pc  unitree_gazebo.pc  unitree_legged_control.pc  unitree_legged_msgs.pc
devel/lib/quadsys/: quadsys_node
devel/lib/unitree_controller/: unitree_external_force  unitree_move_kinetic  unitree_servo
devel/share/RPdynamics/cmake/: RPdynamicsConfig.cmake
devel/share/a1_description/cmake/: a1_descriptionConfig.cmake
devel/share/gazebo_sim/cmake/: gazebo_simConfig.cmake
devel/share/gennodejs/ros/unitree_legged_msgs/msg/: _index.js
devel/share/quadsys/cmake/: quadsysConfig.cmake
devel/share/roseus/ros/unitree_legged_msgs/: manifest.l
devel/share/unitree_controller/cmake/: unitree_controllerConfig.cmake
devel/share/unitree_gazebo/cmake/: unitree_gazeboConfig.cmake
devel/share/unitree_legged_control/cmake/: unitree_legged_controlConfig.cmake
devel/share/unitree_legged_msgs/cmake/: unitree_legged_msgs-msg-paths.cmake  unitree_legged_msgsConfig.cmake
src/RPdynamics/: CMakeLists.txt  package.xml
src/RPdynamics/config/: visual_rviz.rviz
src/RPdynamics/include/: MathType.h  RPBody.h  RPJoint.h  RPRobot.h  RPenum.h  Spatial.h  TimeCounter.h  dynamics.h  visual_rviz.h
src/RPdynamics/launch/: gezebo_test.launch  visual_rviz.launch
src/RPdynamics/src/: Body.cpp  Build_A1.cpp  DYTest.cpp  Joint.cpp  RPRobot.cpp  Spatial.cpp  dynamics.cpp  urdfData.cpp  visual_rviz.cpp
src/a1_description/config/: robot_control.yaml
src/a1_description/urdf/: a1.urdf
src/a1_description/xacro/: gazebo.xacro
src/gazebo_sim/: CMakeLists.txt
src/gazebo_sim/config/: robot_control.yaml
src/gazebo_sim/launch/: gazebo_sim.launch
src/quadsys/: CMakeLists.txt  package.xml
src/quadsys/include/FSM/: State_Trotting.h
src/quadsys/include/common/: Legged.h  enumClass.h  mathTools.h  mathTypes.h  timeMarker.h
src/quadsys/include/control/: BalanceCtrl.h  ControlFrame.h  CtrlComponents.h  Estimator.h
src/quadsys/include/gait/: WaveGenerator.h
src/quadsys/include/interface/: IOROS.h
src/quadsys/include/message/: LowlevelCmd.h
src/quadsys/include/wbc_controller/: wbc_controller.h
src/quadsys/launch/: gazebo_sim.launch
src/quadsys/src/: main.cpp
src/quadsys/src/FSM/: FSM.cpp  State_FixedStand.cpp  State_FreeStand.cpp  State_Passive.cpp  State_SwingTest.cpp  State_Trotting.cpp
src/quadsys/src/common/: robot.cpp
src/quadsys/src/control/: BalanceCtrl.cpp  Estimator.cpp
src/quadsys/src/gait/: FeetEndCal.cpp  GaitGenerator.cpp
src/quadsys/src/interface/: IOROS.cpp
src/quadsys/src/wbc_controller/: wbc_controller.cpp
src/quadsys/worlds/: a1  a1.world  a11.world  a111.world  earth.world
